<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.opentosca</groupId>
    <artifactId>container</artifactId>
    <version>3.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <apache.cxf.version>3.1.18</apache.cxf.version>
        <camel.version>3.8.0</camel.version>
        <commons-io.version>2.6</commons-io.version>
        <jacoco.reportPath>${project.build.directory}/jacoco.exec</jacoco.reportPath>
        <jacoco.append>false</jacoco.append>
        <jaxb.version>2.2.11</jaxb.version>
        <junit.version>4.13.2</junit.version>
        <logback.version>1.1.11</logback.version>
        <!-- needs to match the jersey version used in winery to avoid conflicts -->
        <jersey.version>2.30.1</jersey.version>
        <spring.version>4.3.25.RELEASE</spring.version>
        <swagger.version>1.5.24</swagger.version>
        <tomcat.version>9.0.43</tomcat.version>
    </properties>

    <repositories>
        <repository>
            <name>Central</name>
            <id>central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <repository>
            <name>JCenter Public Repository</name>
            <id>jcenter</id>
            <url>https://jcenter.bintray.com/</url>
        </repository>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <modules>
        <module>org.opentosca.broker.mqtt</module>
        <module>org.opentosca.bus</module>
        <module>org.opentosca.container.connector.ode</module>
        <module>org.opentosca.container.connector.winery</module>
        <module>org.opentosca.container.control</module>
        <module>org.opentosca.container.core</module>
        <module>org.opentosca.container.engine.plan</module>
        <module>org.opentosca.container.engine.plan.plugin.bpel</module>
        <module>org.opentosca.container.engine.plan.plugin.camunda</module>
        <module>org.opentosca.container.integration.tests</module>
        <module>org.opentosca.container.reporting</module>
        <module>org.opentosca.container.war</module>
        <module>org.opentosca.deployment.checks</module>
        <module>org.opentosca.container.api</module>
        <module>org.opentosca.planbuilder</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.6</version>
                <configuration>
                    <append>${jacoco.append}</append>
                    <destFile>${jacoco.reportPath}</destFile>
                </configuration>
                <executions>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>3.1.1</version>
                    <configuration>
                        <configLocation>checkstyle.xml</configLocation>
                        <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
                        <encoding>UTF-8</encoding>
                        <consoleOutput>true</consoleOutput>
                        <failsOnError>true</failsOnError>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>com.thomasjensen.checkstyle.addons</groupId>
                            <artifactId>checkstyle-addons</artifactId>
                            <version>6.0.1</version>
                        </dependency>
                    </dependencies>
                    <executions>
                        <execution>
                            <id>validate</id>
                            <phase>validate</phase>
                            <configuration>
                                <consoleOutput>true</consoleOutput>
                                <failsOnError>true</failsOnError>
                            </configuration>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <release>11</release>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencies>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.2.3</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jdt</groupId>
            <artifactId>org.eclipse.jdt.annotation</artifactId>
            <version>2.1.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>javax.ws.rs</groupId>
                <artifactId>javax.ws.rs-api</artifactId>
                <version>2.1.1</version>
            </dependency>

            <!-- pin jaxb-core and jaxb-impl version to avoid NoSuchFieldError: REFLECTION
                as suggested in https://stackoverflow.com/a/30220824/ -->
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-core</artifactId>
                <version>${jaxb.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-impl</artifactId>
                <version>${jaxb.version}</version>
            </dependency>

            <dependency>
                <groupId>wsdl4j</groupId>
                <artifactId>wsdl4j</artifactId>
                <version>1.6.3</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
